@@ -6620,4 +6620,5 @@ PACKAGE: 2.2.99.2
     that allows some explanatory text to be added, fixing #3000
  * Subjects inputform plugin now uses a field-specific search_bar phrase,
     fixing #3070
+ * Don't always show the owner_denied message, fixing #3130
 
